# KinectWithOpenGL

./: CMakeLists.txt  README.md
doc/: PointCloudsInOpenGL.md  depthnotes.txt
shaders/: depthpoints.frag  depthpoints.vert  simpletex.frag  simpletex.vert
src/: glfw_main.cpp
src/DepthCamera/: DepthCamera.cpp  DepthCamera.h  DepthCameraFromFile.h  DepthCameraKinectSDK.cpp  DepthCameraKinectSDK.h  DepthCameraKinectSDK2.cpp  DepthCameraKinectSDK2.h  DepthCameraOpenNI.cpp  DepthCameraOpenNI.h
src/Scene/: DepthCamScene.cpp  DepthCamScene.h
src/Util/: Logger.h
src/Util/GL/: ShaderFunctions.cpp  ShaderWithVariables.cpp
tools/: copyDLLs.py
